JEDIT 3.2 VERSION HISTORY

* Version 3.2.1

+ Bug Fixes

- Clicks in table of contents in help viewer didn't work
- A few actions didn't record a trailing ; when recording a macro
- Fixed another BeanShell performance problem

* Version 3.2final

+ Enhancements

- Improvements to plugin resource handling, needed by XML plugin 0.4
- Changes to BeanShellAction to improve performance
- jedit.spec file for creating RPM improved (Mike Dillon)
- Documentation changes (John Gellene)
- jEditLauncher updates (John Gellene)

+ Bug Fixes

- Removed debug message from JEditTextArea.java
- 'Go to Previous Bracket' command didn't work

* Version 3.2pre10

+ New Features

- PL-SQL syntax highlighting (Rick Owen)

+ Enhancements

- Documentation updates
- The jedit.spec file for creating the Linux RPM package can now be used
  to compile and build jEdit from scratch
- Improved RPM spec syntax highlighting
- Read-only flag is automatically set when loading files from read-only
  filesystems, like the Archive plugin VFS
- Improved JSP syntax highlighting (Daiji Takamori)
- Nicer looking history text fields (Dirk Moebius)
- C+Home and C+End no longer deactivate selections in multiple selection
  mode

+ Bug Fixes

- C+. and C+, bug fix, again
- Help viewer tree would showed tooltips in wrong place
- Replacing text with multiple selections active caused the text to be
  inserted in the wrong place
- Reverse search didn't work sometimes
- AltGR key works on JDK 1.4 again
- The plugin manager now only uses the first three characters of the
  java.version property when checking plugin dependencies. This solves
  the problem of the WheelMouse plugin not appearing on JDK 1.3.1, because
  one version was listed as needing Java >= 1.2, <= 1.3, and the other
  needing Java >= 1.4.

+ API Changes

- BeanShell.eval() no longer creates a new namespace
- jEdit.openFile(View,String,String,boolean,boolean) deprecated
  jEdit.openFile(View,String,String,boolean,boolean,Hashtable) depreacted