@@ -221,6 +221,7 @@ John Gellene:       - 'Writing macros' section of user's guide
                     - ... and more
 Jonathan Revusky:   - Python edit mode
 Juha Lindfors:      - IDL edit mode
+Kris Kopicki:       - Objective C syntax highlighting
 Kristian Ovaska:    - Intel x86 Assembly, Haskell, Pascal edit modes
 Lionel Fiol:        - Omnimark edit mode
 Marc Rummel:        - MIPS R2000 Assembly edit mode
